--- a/src/app/shared/components/loaders/loader-base/loader-base.component.html
+++ b/src/app/shared/components/loaders/loader-base/loader-base.component.html
@@ -1,8 +1,14 @@
 <ion-row>
   <ion-col>
-    <ion-spinner></ion-spinner>
-    <ion-img [src]="images[currentIndex]+'?text='+currentIndex" alt="Loader Image" style="max-width: 100%;"></ion-img>
-    <ion-label>{{ texts[currentIndex] }}</ion-label>
+    <div class="loader-content">
+      @if(images.length){
+        <ion-img  [src]="images[currentIndex]+'?text='+currentIndex" alt="Loader Image" style="max-width: 100%;"></ion-img>
+      }@else{
+        <ion-skeleton-text animated style="width: 300px; height: 200px"></ion-skeleton-text>
+      }
+      <ion-label>{{ texts[currentIndex] }}</ion-label>
+    </div>
+
   </ion-col>
 </ion-row>
 
